--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Uriage Korea" />
   <meta property="og:description" content="프랑스 더모코스메틱 브랜드, 유리아쥬! 민감성 피부를 위한 프랑스 온천수 함유." />
   <meta property="og:image" content="./images/uriage_seo.png" />
-  <meta property="og:url" content="#" />
+  <meta property="og:url" content="https://focused-feynman-42ddb9.netlify.app/" />
 
   <!-- 트위터 카드(Twitter Cards) -->
   <meta property="twitter:card" content="summary" />
@@ -19,7 +19,7 @@
   <meta property="twitter:title" content="Uriage Korea" />
   <meta property="twitter:description" content="프랑스 더모코스메틱 브랜드, 유리아쥬! 민감성 피부를 위한 프랑스 온천수 함유." />
   <meta property="twitter:image" content="./images/uriage_seo.png" />
-  <meta property="twitter:url" content="#" />
+  <meta property="twitter:url" content="https://focused-feynman-42ddb9.netlify.app/" />
 
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
