--- a/index.html
+++ b/index.html
@@ -210,64 +210,64 @@
 <!----- CONTENTS ----->
 <div id="container">
   <!-- NEW -->
-  <section id="new" class="scroll-spy">
-    <h2 class="back-to-position to-right delay-0">NEW</h2>
+  <section id="new">
+    <h2>NEW</h2>
     <article>
       <div>
         <a href="#">
-          <div class="new1 back-to-position to-right delay-1"></div>
-          <h3 class="back-to-position to-right delay-2">유리아쥬 이제약 토너 500mL</h3>
-          <p class="back-to-position to-right delay-3">HYSEAC PURIFYING TONER</p>
+          <div class="new1"></div>
+          <h3>유리아쥬 이제약 토너 500mL</h3>
+          <p>HYSEAC PURIFYING TONER</p>
         </a>
       </div>
     </article>
     <article>
       <div>
         <a href="#">
-          <div class="new2 back-to-position to-bottom delay-1"></div>
-          <h3 class="back-to-position to-bottom delay-2">배리어덤 시카 선크림 SPF50+</h3>
-          <p class="back-to-position to-bottom delay-3">BARIEDERM CICA-CREAM</p>
+          <div class="new2"></div>
+          <h3>배리어덤 시카 선크림 SPF50+</h3>
+          <p>BARIEDERM CICA-CREAM</p>
         </a>
       </div>
     </article>
     <article>
       <div>
         <a href="#">
-          <div class="new3 back-to-position to-left delay-1"></div>
-          <h3 class="back-to-position to-left delay-2">쉬르그라리끼드 전신 클렌저</h3>
-          <p class="back-to-position to-left delay-3">URIAGE GEL SURGRAS</p>
+          <div class="new3"></div>
+          <h3>쉬르그라리끼드 전신 클렌저</h3>
+          <p>URIAGE GEL SURGRAS</p>
         </a>
       </div>
     </article>
   </section>
         
   <!-- BESTSELLER -->
-  <section id="bestseller" class="scroll-spy">
-    <h2 class="back-to-position to-right delay-0">BESTSELLER</h2>
+  <section id="bestseller">
+    <h2>BESTSELLER</h2>
     <article>
       <div>
         <a href="#">
-          <div class="best1 back-to-position to-right delay-1"></div>
-          <h3 class="back-to-position to-right delay-2">유리아쥬 제모스 토너 500mL</h3>
-          <p class="back-to-position to-right delay-3">XEMOSE TONER</p>
+          <div class="best1"></div>
+          <h3>유리아쥬 제모스 토너 500mL</h3>
+          <p>XEMOSE TONER</p>
         </a>
       </div>
     </article>
     <article>
       <div>
         <a href="#">
-          <div class="best2 back-to-position to-bottom delay-1"></div>
-          <h3 class="back-to-position to-bottom delay-2">스틱레브르 오리지널 립밤</h3>
-          <p class="back-to-position to-bottom delay-3">STICK LEVRES ORIGINAL</p>
+          <div class="best2"></div>
+          <h3>스틱레브르 오리지널 립밤</h3>
+          <p>STICK LEVRES ORIGINAL</p>
         </a>
       </div>
     </article>
     <article>
       <div>
         <a href="#">
-          <div class="best3 back-to-position to-left delay-1"></div>
-          <h3 class="back-to-position to-left delay-2">진피 마일드 젤 200mL</h3>
-          <p class="back-to-position to-left delay-3">GYN-PHY DAILY FEMININE MILD GEL</p>
+          <div class="best3"></div>
+          <h3>진피 마일드 젤 200mL</h3>
+          <p>GYN-PHY DAILY FEMININE MILD GEL</p>
         </a>
       </div>
     </article>
